--- a/config.yaml
+++ b/config.yaml
@@ -7,11 +7,12 @@ params:
   optimizer: SGD
   validation_datasize: 5000
 
-artifects: 
-  artifects_dir : artifects
-  model_dr : model
+artifacts:
+  artifacts_dir : artifacts
+  model_dir : model
   plots_dir : plots
   checkpoint_dir : checkpoints
+  model_name : model.h5
 
 logs:
   logs_dir : logs_dir
